calculator-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
  labels:
    app: calculator-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator-api
  template:
    metadata:
      labels:
        app: calculator-api
    spec:
      containers:
        - name: calculator-api-container
          image: localhost:5000/calculator-image:latest
          ports:
            - containerPort: 8080
