calculator-api/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  selector:
    app: calculator-api
  ports:
    - protocol: TCP
      port: 21500
      targetPort: 8080
  type: ClusterIP
